force-app/main/default/objects/TPM_Approval_Tactics__c/TPM_Approval_Tactics__c.object-meta.xml
<CustomObject>
    <description>Approval Tactics object is a child for approval object</description>
    <label>Approval Tactics</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Approval Tactics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Tactics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>