force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Approval__c.field-meta.xml
<CustomField>
    <fullName>TPM_Approval__c</fullName>
    <description>Child Object of Approval Object</description>
    <label>Approval</label>
    <referenceTo>TPM_Approval__c</referenceTo>
    <relationshipLabel>Approval Tactics</relationshipLabel>
    <relationshipName>Approval_Tactics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>