force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Comment__c.field-meta.xml
<CustomField>
    <fullName>TPM_Comment__c</fullName>
    <description>Short Comment to describe the tactic</description>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>