force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Compensation_Model__c.field-meta.xml
<CustomField>
    <fullName>TPM_Compensation_Model__c</fullName>
    <description>Which compensation model should be used for a tactic</description>
    <inlineHelpText>Rule to calculate promotion spend</inlineHelpText>
    <label>Rate Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LumpSum</fullName>
                <default>true</default>
                <label>LumpSum</label>
            </value>
            <value>
                <fullName>WeeklyLumpSum</fullName>
            </value>
            <value>
                <fullName>PerCase</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>