force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Depth_of_Deal__c.field-meta.xml
<CustomField>
    <fullName>TPM_Depth_of_Deal__c</fullName>
    <description>Calculates the anticipated spend for post event comparison purposes</description>
    <label>Depth of Deal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>