force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_In_Store_Date_From__c.field-meta.xml
<CustomField>
    <fullName>TPM_In_Store_Date_From__c</fullName>
    <description>Instore start date of a tactic</description>
    <label>In-Store Date From</label>
    <type>Date</type>
</CustomField>