force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_In_Store_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>TPM_In_Store_Date_Thru__c</fullName>
    <description>Instore end date of a tactic</description>
    <label>In-Store Date Thru</label>
    <type>Date</type>
</CustomField>