force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Included__c.field-meta.xml
<CustomField>
    <fullName>TPM_Included__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if a tactic is included in a promotion</description>
    <label>Included</label>
    <type>Checkbox</type>
</CustomField>