force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>TPM_Payment_Method__c</fullName>
    <description>Which payment method should be used for a tactic</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deduction</fullName>
                <default>true</default>
                <label>Deduction</label>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>OnInvoice</fullName>
            </value>
            <value>
                <fullName>OffInvoice</fullName>
            </value>
            <value>
                <fullName>OI</fullName>
            </value>
            <value>
                <fullName>Billback/Retrospective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>