force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Pct_of_Stores__c.field-meta.xml
<CustomField>
    <fullName>TPM_Pct_of_Stores__c</fullName>
    <defaultValue>1</defaultValue>
    <description>TPM_Pct_of_Stores</description>
    <label>Redemption %</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>