force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Pending_Claim__c.field-meta.xml
<CustomField>
    <fullName>TPM_Pending_Claim__c</fullName>
    <label>Pending Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>