force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Plan_Spend__c.field-meta.xml
<CustomField>
    <fullName>TPM_Plan_Spend__c</fullName>
    <label>Plan Spend</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>