force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Promotion_Phase__c.field-meta.xml
<CustomField>
    <fullName>TPM_Promotion_Phase__c</fullName>
    <label>Promotion Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>