force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Shipment_Date_From__c.field-meta.xml
<CustomField>
    <fullName>TPM_Shipment_Date_From__c</fullName>
    <description>Shipment start date of a tactic</description>
    <label>Shipment Date From</label>
    <type>Date</type>
</CustomField>