force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Shipment_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>TPM_Shipment_Date_Thru__c</fullName>
    <description>Shipment end date of a tactic</description>
    <label>Shipment Date Thru</label>
    <type>Date</type>
</CustomField>