force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Tactic__c.field-meta.xml
<CustomField>
    <fullName>TPM_Tactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated Tactic</description>
    <label>Tactic</label>
    <referenceTo>cgcloud__Tactic__c</referenceTo>
    <relationshipLabel>Approval Tactics</relationshipLabel>
    <relationshipName>Approval_Tactics</relationshipName>
    <type>Lookup</type>
</CustomField>