force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Tactic_Template__c.field-meta.xml
<CustomField>
    <fullName>TPM_Tactic_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for tactic template</description>
    <label>Tactic Template</label>
    <referenceTo>cgcloud__Tactic_Template__c</referenceTo>
    <relationshipName>Approval_Tactics</relationshipName>
    <type>Lookup</type>
</CustomField>