force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_Tactic_Type__c.field-meta.xml
<CustomField>
    <fullName>TPM_Tactic_Type__c</fullName>
    <description>Description for Tactic template</description>
    <label>Tactic Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>