force-app/main/default/objects/TPM_Approval_Tactics__c/fields/TPM_To_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>TPM_To_Date_Paid__c</fullName>
    <label>To-Date Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>