force-app/main/default/objects/TPM_Approval_Tactics__c/recordTypes/TPM_Claim_Tactics.recordType-meta.xml
<RecordType>
    <fullName>TPM_Claim_Tactics</fullName>
    <active>true</active>
    <description>Claim Tactics</description>
    <label>Claim Tactics</label>
</RecordType>