force-app/main/default/objects/TPM_Approval_Tactics__c/recordTypes/TPM_Promotion_Tactics.recordType-meta.xml
<RecordType>
    <fullName>TPM_Promotion_Tactics</fullName>
    <active>true</active>
    <description>Promotion Tactics</description>
    <label>Promotion Tactics</label>
</RecordType>